--- a/reference.bib
+++ b/reference.bib
@@ -5,6 +5,7 @@
 @String { CAD      = {Computer Aided Design} }
 @String { CAGD     = {Comput. Aided Geom. Des.} }
 @String { CGF      = {Comput. Graph. Forum} }
+@String { CVM      = {Computational Visual Media} }
 @String { CVPR     = {CVPR} }
 @String { ECCV     = {ECCV} }
 @String { EG       = {Comput. Graph. Forum (EG)} }
@@ -1740,7 +1741,7 @@
 
 @inproceedings{Lai2022,
   title     = {Stratified Transformer for {3D} Point Cloud Segmentation},
-  author    = {Xin Lai, Jianhui Liu, Li Jiang, Liwei Wang, Hengshuang Zhao, Shu Liu, Xiaojuan Qi, Jiaya Jia},
+  author    = {Lai, Xin and Liu, Jianhui and Jiang, Li and Wang, Liwei and Zhao, Hengshuang and Liu, Shu and Qi, Xiaojuan and Jia, Jiaya},
   booktitle = CVPR,
   year      = {2022}
 }
@@ -3364,6 +3365,13 @@
   year      = {2021}
 }
 
+@inproceedings{Wang2021c,
+  title     = {Pyramid vision transformer: A versatile backbone for dense prediction without convolutions},
+  author    = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
+  booktitle = ICCV,
+  year      = {2021}
+}
+
 @article{Wang2022,
   title   = {Dual Octree Graph Networks for Learning Adaptive Volumetric Shape Representations},
   author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
@@ -3371,6 +3379,15 @@
   year    = {2022},
   volume  = {41},
   number  = {4}
+}
+
+@article{Wang2022a,
+  title   = {{PVT} v2: Improved baselines with pyramid vision transformer},
+  author  = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
+  journal = CVM,
+  volume  = {8},
+  number  = {3},
+  year    = {2022}
 }
 
 @misc{Warehouse2018,
@@ -3396,6 +3413,7 @@
   year      = {2016}
 }
 
+
 @article{Wilhelms1992,
   author  = {Wilhelms, Jane and Van Gelder, Allen},
   title   = {Octrees for faster isosurface generation},
@@ -3411,7 +3429,6 @@
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @inproceedings{Williams2022,
   title     = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
@@ -3443,12 +3460,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{Wu2017,
   author    = {Wu, Jiajun and Wang, Yifan and Xue, Tianfan and Sun, Xingyuan and Freeman, Bill and Tenenbaum, Josh},
   title     = {Marrnet: {3D} shape reconstruction via {2.5D} sketches},
   booktitle = NeurIPS,
   year      = {2017}
 }
+
 
 @article{Wu2018,
   author  = {Wu, Qiaoyun and Xu, Kai and Wang, Jun},
@@ -3459,14 +3478,12 @@
   number  = {5}
 }
 
-
 @inproceedings{Wu2018a,
   author    = {Wu, Zhirong and Xiong, Yuanjun and Yu, Stella X. and Lin, Dahua},
   title     = {Unsupervised Feature Learning via Non-Parametric Instance Discrimination},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @inproceedings{Wu2018b,
   author    = {Wu, Jiajun and Zhang, Chengkai and Zhang, Xiuming and Zhang, Zhoutong and Freeman, William T and Tenenbaum, Joshua B},
@@ -3501,9 +3518,9 @@
 }
 
 @article{Wu2021,
-  title   = {Cvt: Introducing convolutions to vision transformers},
+  title   = {{CvT}: Introducing convolutions to vision transformers},
   author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
-  journal = {arXiv preprint arXiv:2103.15808},
+  journal = ICCV,
   year    = {2021}
 }
 
@@ -3537,6 +3554,7 @@
   year      = {2021}
 }
 
+
 @article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
   title   = {Structure extraction from texture via relative total variation},
@@ -3546,6 +3564,7 @@
   number  = {6}
 }
 
+
 @inproceedings{Xu2014,
   author    = {Xu, Hongyi and Barbi\v{c}, Jernej},
   title     = {Signed Distance Fields for Polygon Soup Meshes},
@@ -3553,14 +3572,12 @@
   booktitle = {Proceedings of Graphics Interface}
 }
 
-
 @inproceedings{Xu2015,
   author    = {Li Xu and Jimmy SJ. Ren and Qiong Yan and Renjie Liao and Jiaya Jia},
   title     = {Deep edge-aware filters},
   booktitle = ICML,
   year      = {2015}
 }
-
 
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
@@ -3578,6 +3595,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
   author    = {Xu, Mutian and Ding, Runyu and Zhao, Hengshuang and Qi, Xiaojuan},
@@ -3585,13 +3603,13 @@
   year      = {2021}
 }
 
+
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
   booktitle = {Geom. Model. and Proc.},
   year      = {2002}
 }
-
 
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
@@ -3601,13 +3619,13 @@
   issn      = {1530-1052}
 }
 
-
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   booktitle = {Geom. Model. and Proc.},
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
   year      = {2006}
 }
+
 
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
@@ -3622,7 +3640,6 @@
   journal = {arXiv preprint arXiv:2004.10987},
   year    = {2020}
 }
-
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3661,6 +3678,7 @@
   year    = {2020}
 }
 
+
 @article{Yi2016,
   author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
   title   = {A scalable active framework for region annotation in 3D shape collections},
@@ -3669,6 +3687,7 @@
   volume  = {35},
   number  = {6}
 }
+
 
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
@@ -3687,14 +3706,12 @@
   number  = {4}
 }
 
-
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
@@ -3705,12 +3722,14 @@
   number  = {4}
 }
 
+
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
   title     = {{PVNet}: A joint convolutional network of point cloud and multi-view for {3D} shape recognition},
   year      = {2018}
 }
+
 
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -3721,14 +3740,12 @@
   number  = {3}
 }
 
-
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
@@ -3757,6 +3774,7 @@
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
@@ -3789,7 +3807,6 @@
   number  = {6}
 }
 
-
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3799,12 +3816,14 @@
   number  = {3}
 }
 
+
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
+
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3814,7 +3833,6 @@
   volume  = {21},
   number  = {7}
 }
-
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3839,7 +3857,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Zhang2018a,
   title     = {mixup: Beyond Empirical Risk Minimization},
@@ -3943,6 +3960,7 @@
   number  = {3}
 }
 
+
 @article{Zhou2011,
   author  = {Zhou, Kun and Gong, Minmin and Huang, Xin and Guo, Baining},
   title   = {Data-parallel octrees for surface reconstruction},
@@ -3958,7 +3976,6 @@
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @article{Zhou2018,
   title   = {{Open3D}: A modern library for {3D} data processing},
@@ -3994,3 +4011,4 @@
   booktitle = ICCV,
   year      = {2017}
 }
+
