--- a/reference.bib
+++ b/reference.bib
@@ -667,6 +667,15 @@
   year      = {2013}
 }
 
+@article{Crane2013a,
+  title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
+  author  = {Crane, Keenan and Weischedel, Clarisse and Wardetzky, Max},
+  journal = TOG,
+  volume  = {32},
+  number  = {5},
+  year    = {2013}
+}
+
 @inproceedings{Curless1996,
   author    = {Curless, Brian and Levoy, Marc},
   title     = {A Volumetric Method for Building Complex Models from Range Images},
@@ -853,6 +862,7 @@
   year      = {2014}
 }
 
+
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
@@ -868,7 +878,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
   title     = {Structured prediction of unobserved voxels from a single depth image},
@@ -876,13 +885,13 @@
   year      = {2016}
 }
 
+
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
   title   = {Meta-representation of shape families},
   journal = SIG,
   year    = {2014}
 }
-
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -1005,6 +1014,7 @@
   year      = {2015}
 }
 
+
 @article{Graham2017,
   author  = {Graham, Benjamin and van der Maaten, Laurens},
   title   = {Submanifold Sparse Convolutional Networks},
@@ -1019,7 +1029,6 @@
   booktitle = CVPR,
   year      = 2018
 }
-
 
 @inproceedings{Grill2020,
   author    = {Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and BernardoAvila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
@@ -1075,6 +1084,7 @@
   number  = {1}
 }
 
+
 @inproceedings{Guo2018,
   author    = {Guo, Yuxiao and Tong, Xin},
   title     = {View-volume Network for Semantic Scene Completion from a Single Depth Image},
@@ -1091,7 +1101,6 @@
   eprint        = {1912.12033},
   primaryclass  = {cs.CV}
 }
-
 
 @article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
@@ -1263,13 +1272,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{He2022,
   author    = {Kaiming He and Xinlei Chen and Saining Xie and Yanghao Li and Piotr Doll{\'a}r and Ross Girshick},
   booktitle = CVPR,
   title     = {Masked Autoencoders Are Scalable Vision Learners},
   year      = {2022}
 }
-
 
 @inproceedings{Hegde2016,
   author    = {Vishakh Hegde and Reza Zadeh},
@@ -1692,13 +1701,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Kraehenbuehl2011,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
   title     = {Efficient inference in fully connected {CRFs} with gaussian edge potentials},
   booktitle = NeurIPS,
   year      = {2011}
 }
-
 
 @inproceedings{Kraehenbuehl2013,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
@@ -1768,13 +1777,13 @@
   number  = {99}
 }
 
+
 @inproceedings{Lee2005,
   author    = {Kai-Wah Lee and Wen-Ping Wang},
   title     = {Feature-preserving mesh denoising via bilateral normal filtering},
   booktitle = {Ninth International Conference on Computer Aided Design and Computer Graphics},
   year      = {2005}
 }
-
 
 @inproceedings{Lee2015,
   author    = {Donghoon Lee and Hyunsin Park and Yoo, C.D.},
@@ -1799,6 +1808,7 @@
   year    = {2008}
 }
 
+
 @inproceedings{Levy2013,
   author    = {L\'{e}vy, Bruno and Bonneel, Nicolas},
   title     = {Variational anisotropic surface meshing with {Voronoi} parallel linear enumeration},
@@ -1806,7 +1816,6 @@
   year      = {2013},
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
-
 
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
@@ -1826,6 +1835,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
@@ -1844,7 +1854,6 @@
   issn    = {0730-0301}
 }
 
-
 @inproceedings{Li2018,
   title     = {{PointCNN}: Convolution on X-transformed points},
   author    = {Li, Yangyan and Bu, Rui and Sun, Mingchao and Wu, Wei and Di, Xinhan and Chen, Baoquan},
@@ -1852,13 +1861,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
-
 
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
@@ -1876,13 +1885,13 @@
   year    = {2021}
 }
 
+
 @article{Li2021a,
   title   = {Can Vision Transformers Perform Convolution?},
   author  = {Shanda Li and Xiangning Chen and Di He and Cho-Jui Hsieh},
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
-
 
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
@@ -2280,13 +2289,13 @@
   year      = {2015}
 }
 
+
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
   author    = {Oechsle, Michael and Mescheder, Lars and Niemeyer, Michael and Strauss, Thilo and Geiger, Andreas},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @article{Ohtake2003,
   author  = {Ohtake, Yutaka and Belyaev, Alexander and Alexa, Marc and Turk, Greg and Seidel, Hans-Peter},
@@ -2306,6 +2315,7 @@
   year    = {2002}
 }
 
+
 @article{Oztireli2009,
   title   = {Feature preserving point set surfaces based on non-linear kernel regression},
   author  = {{\"O}ztireli, A Cengiz and Guennebaud, Gael and Gross, Markus},
@@ -2322,7 +2332,6 @@
   booktitle = SGPOLD,
   year      = {2004}
 }
-
 
 @inproceedings{Paine2015,
   author    = {Paine, Tom Le and Khorrami, Pooya and Han, Wei and Huang, Thomas S},
@@ -2478,6 +2487,7 @@
   year    = {2019}
 }
 
+
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
   title   = {Unified Neural Encoding of {BTFs}},
@@ -2486,7 +2496,6 @@
   number  = 2,
   year    = 2020
 }
-
 
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
@@ -2504,13 +2513,13 @@
   publisher = {Elsevier}
 }
 
+
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
   title     = {Faster {R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
   booktitle = NeurIPS,
   year      = {2015}
 }
-
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -2563,6 +2572,7 @@
   year      = 2019
 }
 
+
 @article{Rousseeuw1987,
   author  = {Peter J. Rousseeuw},
   title   = {Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
@@ -2571,7 +2581,6 @@
   volume  = {20},
   issn    = {0377-0427}
 }
-
 
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
@@ -2589,13 +2598,13 @@
   year    = {2021}
 }
 
+
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
   booktitle = NeurIPS,
   year      = {2017}
 }
-
 
 @inproceedings{Sanchez2020,
   title     = {Learning to simulate complex physics with graph networks},
@@ -2656,6 +2665,7 @@
   year      = {2016}
 }
 
+
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2673,7 +2683,6 @@
   year    = {2018}
 }
 
-
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2683,6 +2692,7 @@
   number  = {4}
 }
 
+
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -2690,7 +2700,6 @@
   volume  = {89},
   year    = {2010}
 }
-
 
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
@@ -2740,6 +2749,7 @@
   number  = {3}
 }
 
+
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -2759,7 +2769,6 @@
   number  = {3}
 }
 
-
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
@@ -2767,13 +2776,13 @@
   year    = {2015}
 }
 
+
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
   journal = {arXiv preprint arXiv:2106.04121},
   year    = {2021}
 }
-
 
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
@@ -2834,6 +2843,7 @@
   year    = {2018}
 }
 
+
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
@@ -2848,7 +2858,6 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -2909,6 +2918,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -2923,7 +2933,6 @@
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -2978,6 +2987,7 @@
   year      = {2015}
 }
 
+
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
   title   = {Data-driven structural priors for shape completion},
@@ -2997,13 +3007,13 @@
   number  = {5}
 }
 
-
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
+
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -3019,7 +3029,6 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Tang2018,
   title   = {Real-time Compression and Streaming of {4D} Performances},
@@ -3044,13 +3053,13 @@
   year      = {2021}
 }
 
+
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
   author    = {Tang, Jiapeng and Lei, Jiabao and Xu, Dan and Ma, Feiying and Jia, Kui and Zhang, Lei},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -3075,6 +3084,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Octree generating networks: efficient convolutional architectures for high-resolution {3D} outputs},
@@ -3089,7 +3099,6 @@
   booktitle = {SIGGRAPH},
   year      = {1995}
 }
-
 
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
@@ -3321,6 +3330,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Wang2020,
   author    = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
   booktitle = {CVPR Workshop},
@@ -3335,7 +3345,6 @@
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Wang2020b,
   author  = {Hanchen Wang and Qi Liu and Xiangyu Yue and Joan Lasenby and Matthew J. Kusner},
@@ -3406,13 +3415,13 @@
   number  = {1}
 }
 
+
 @inproceedings{Wei2016,
   author    = {Linyu Wei and Qixing Huang and Duygu Ceylan and Etienne Vouga and Hao Li},
   title     = {Dense human body correspondences using convolutional networks},
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @article{Wilhelms1992,
   author  = {Wilhelms, Jane and Van Gelder, Allen},
@@ -3453,6 +3462,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
   title     = {Learning a probabilistic latent space of object shapes via {3D} generative-adversarial modeling},
@@ -3467,7 +3477,6 @@
   booktitle = NeurIPS,
   year      = {2017}
 }
-
 
 @article{Wu2018,
   author  = {Wu, Qiaoyun and Xu, Kai and Wang, Jun},
@@ -3524,6 +3533,13 @@
   year    = {2021}
 }
 
+@article{Xia2021,
+  title   = {{GeodesicEmbedding (GE)}: a high-dimensional embedding approach for fast geodesic distance queries},
+  author  = {Xia, Qianwei and Zhang, Juyong and Fang, Zheng and Li, Jin and Zhang, Mingyue and Deng, Bailin and He, Ying},
+  journal = TVCG,
+  year    = {2021}
+}
+
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
   author  = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
@@ -3540,6 +3556,7 @@
   number  = {7}
 }
 
+
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
   author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
@@ -3547,13 +3564,13 @@
   year    = {2020}
 }
 
+
 @inproceedings{Xie2021,
   title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
   author    = {Xie, Zhenda and Lin, Yutong and Zhang, Zheng and Cao, Yue and Lin, Stephen and Hu, Han},
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
@@ -3563,7 +3580,6 @@
   volume  = {31},
   number  = {6}
 }
-
 
 @inproceedings{Xu2014,
   author    = {Xu, Hongyi and Barbi\v{c}, Jernej},
@@ -3579,6 +3595,7 @@
   year      = {2015}
 }
 
+
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -3588,13 +3605,13 @@
   number  = {1}
 }
 
+
 @inproceedings{Xu2018,
   author    = {Xu, Yifan and Fan, Tianqi and Xu, Mingye and Zeng, Long and Qiao, Yu},
   title     = {{SpiderCNN}: Deep Learning on Point Sets with Parameterized Convolutional Filters},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
@@ -3603,13 +3620,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
   booktitle = {Geom. Model. and Proc.},
   year      = {2002}
 }
+
 
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
@@ -3625,7 +3642,6 @@
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
   year      = {2006}
 }
-
 
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
@@ -3664,12 +3680,14 @@
   year    = {2018}
 }
 
+
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
   booktitle = CVPR,
   title     = {{FoldingNet}: Point cloud auto-encoder via deep grid deformation},
   year      = {2018}
 }
+
 
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
@@ -3688,14 +3706,12 @@
   number  = {6}
 }
 
-
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
   title        = {Large-scale {3D} shape reconstruction and segmentation from {ShapeNetCore55}},
   howpublished = {arXiv:1710.06104 [cs.CV]},
   year         = {2017}
 }
-
 
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
@@ -3706,12 +3722,14 @@
   number  = {4}
 }
 
+
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
@@ -3722,14 +3740,12 @@
   number  = {4}
 }
 
-
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
   title     = {{PVNet}: A joint convolutional network of point cloud and multi-view for {3D} shape recognition},
   year      = {2018}
 }
-
 
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -3761,6 +3777,7 @@
   year      = {2021}
 }
 
+
 @article{Yu2021a,
   title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
   author  = {Yu, Xumin and Tang, Lulu and Rao, Yongming and Huang, Tiejun and Zhou, Jie and Lu, Jiwen},
@@ -3790,13 +3807,13 @@
   year      = {2014}
 }
 
-
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
   author    = {Zeng, Andy and Song, Shuran and Nie{\ss}ner, Matthias and Fisher, Matthew and Xiao, Jianxiong and Funkhouser, Thomas},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -3807,6 +3824,7 @@
   number  = {6}
 }
 
+
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
   title   = {Variational mesh decomposition},
@@ -3815,7 +3833,6 @@
   volume  = {31},
   number  = {3}
 }
-
 
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
@@ -3842,7 +3859,6 @@
   volume  = {34},
   issue   = {7}
 }
-
 
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
@@ -3944,6 +3960,7 @@
   year      = {2013}
 }
 
+
 @inproceedings{Zhong2020,
   title     = {Reconstructing continuous distributions of {3D} protein structure from cryo-{EM} images},
   author    = {Zhong, Ellen D and Bepler, Tristan and Davis, Joseph H and Berger, Bonnie},
@@ -3959,7 +3976,6 @@
   volume  = {25},
   number  = {3}
 }
-
 
 @article{Zhou2011,
   author  = {Zhou, Kun and Gong, Minmin and Huang, Xin and Guo, Baining},
@@ -3998,6 +4014,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
   author    = {Chenyang Zhu and Kai Xu and Siddhartha Chaudhuri and Li Yi and Leonidas Guibas and Hao Zhang},
@@ -4011,4 +4028,3 @@
   booktitle = ICCV,
   year      = {2017}
 }
-
