--- a/reference.bib
+++ b/reference.bib
@@ -28,6 +28,8 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
+
+
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
@@ -63,6 +65,7 @@
   year      = {2003}
 }
 
+
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
@@ -95,6 +98,7 @@
   year      = {2009}
 }
 
+
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
@@ -117,13 +121,13 @@
   year      = {2016}
 }
 
-
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
   author  = {Armeni, Iro and Sax, Sasha and Zamir, Amir R and Savarese, Silvio},
   journal = {arXiv preprint},
   year    = {2017}
 }
+
 
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
@@ -151,7 +155,6 @@
   journal = SIG
 }
 
-
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
   author    = {Atzmon, Matan and Lipman, Yaron},
@@ -166,6 +169,7 @@
   year      = {2021}
 }
 
+
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
   title   = {Mesh segmentation with concavity-aware fields},
@@ -174,6 +178,7 @@
   volume  = {18},
   number  = {7}
 }
+
 
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
@@ -247,7 +252,6 @@
   number  = {1}
 }
 
-
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
   author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
@@ -269,6 +273,7 @@
   number  = {4},
   year    = {2002}
 }
+
 
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
@@ -329,7 +334,6 @@
   number  = {4}
 }
 
-
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
   title   = {Quad-mesh generation and processing: a survey},
@@ -355,6 +359,7 @@
   year      = {2016}
 }
 
+
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
   title   = {On linear variational surface deformation methods},
@@ -363,7 +368,6 @@
   volume  = {14},
   number  = {1}
 }
-
 
 @book{Botsch2010,
   title  = {Polygon Mesh Processing},
@@ -386,6 +390,7 @@
   booktitle = {Proc. of the 4th Eurographics Conference on 3D Object Retrieval},
   year      = {2011}
 }
+
 
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
@@ -540,7 +545,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
@@ -562,6 +566,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
@@ -576,7 +581,6 @@
   year      = {2020}
 }
 
-
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
   title   = {Bilateral texture filtering},
@@ -585,7 +589,6 @@
   volume  = {33},
   number  = {4}
 }
-
 
 @inproceedings{Choy2016,
   author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
@@ -600,6 +603,7 @@
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -644,7 +648,6 @@
   volume  = {23}
 }
 
-
 @misc{Contributors2018,
   author = {Wikipedia Contributors},
   title  = {{Data-driven science --- Wikipedia{,}} The Free Encyclopedia},
@@ -660,12 +663,14 @@
   number  = {3}
 }
 
+
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
   title     = {Digital geometry processing with discrete exterior calculus},
   booktitle = {ACM SIGGRAPH 2013 courses},
   year      = {2013}
 }
+
 
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
@@ -862,14 +867,12 @@
   year      = {2014}
 }
 
-
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
@@ -893,6 +896,7 @@
   year    = {2014}
 }
 
+
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
   title   = {Bilateral mesh denoising},
@@ -908,6 +912,7 @@
   booktitle = {SIGGRAPH},
   year      = {2000}
 }
+
 
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
@@ -1014,14 +1019,12 @@
   year      = {2015}
 }
 
-
 @article{Graham2017,
   author  = {Graham, Benjamin and van der Maaten, Laurens},
   title   = {Submanifold Sparse Convolutional Networks},
   journal = {arXiv preprint arXiv:1706.01307},
   year    = {2017}
 }
-
 
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
@@ -1037,12 +1040,14 @@
   year      = {2020}
 }
 
+
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
   author    = {Gropp, Amos and Yariv, Lior and Haim, Niv and Atzmon, Matan and Lipman, Yaron},
   booktitle = ICML,
   year      = {2020}
 }
+
 
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
@@ -1084,14 +1089,12 @@
   number  = {1}
 }
 
-
 @inproceedings{Guo2018,
   author    = {Guo, Yuxiao and Tong, Xin},
   title     = {View-volume Network for Semantic Scene Completion from a Single Depth Image},
   booktitle = {IJCAI},
   year      = {2018}
 }
-
 
 @misc{Guo2019,
   author        = {Yulan Guo and Hanyun Wang and Qingyong Hu and Hao Liu and Li Liu and Mohammed Bennamoun},
@@ -1111,12 +1114,14 @@
   year    = {2021}
 }
 
+
 @inproceedings{Gupta2016,
   author    = {Gupta, Saurabh and Hoffman, Judy and Malik, Jitendra},
   booktitle = CVPR,
   title     = {Cross modal distillation for supervision transfer},
   year      = {2016}
 }
+
 
 @inproceedings{Guskov1999,
   author    = {Guskov, Igor and Sweldens, Wim and Schr\"{o}der, Peter},
@@ -1272,7 +1277,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{He2022,
   author    = {Kaiming He and Xinlei Chen and Saining Xie and Yanghao Li and Piotr Doll{\'a}r and Ross Girshick},
   booktitle = CVPR,
@@ -1295,6 +1299,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @article{Hinton2006,
   title   = {A fast learning algorithm for deep belief nets},
@@ -1701,7 +1706,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Kraehenbuehl2011,
   author    = {Kr{\"a}henb{\"u}hl, Philipp and Koltun, Vladlen},
   title     = {Efficient inference in fully connected {CRFs} with gaussian edge potentials},
@@ -1723,6 +1727,7 @@
   year      = {2004},
   volume    = {166}
 }
+
 
 @article{Krishnan2013,
   author  = {Krishnan, Dilip and Fattal, Raanan and Szeliski, Richard},
@@ -1777,7 +1782,6 @@
   number  = {99}
 }
 
-
 @inproceedings{Lee2005,
   author    = {Kai-Wah Lee and Wen-Ping Wang},
   title     = {Feature-preserving mesh denoising via bilateral normal filtering},
@@ -1799,6 +1803,7 @@
   year      = {2020}
 }
 
+
 @article{Leon2008,
   title   = {Volume octree with an implicitly defined dual grid},
   author  = {Le{\'o}n, Alejandro and Torres, Juan Carlos and Velasco, Francisco},
@@ -1807,7 +1812,6 @@
   number  = {4},
   year    = {2008}
 }
-
 
 @inproceedings{Levy2013,
   author    = {L\'{e}vy, Bruno and Bonneel, Nicolas},
@@ -1843,7 +1847,6 @@
   year      = {2016}
 }
 
-
 @article{Li2017,
   author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
   title   = {{GRASS}: Generative recursive autoencoders for shape structures},
@@ -1868,6 +1871,7 @@
   booktitle = CVPR,
   year      = 2018
 }
+
 
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
@@ -1909,6 +1913,7 @@
   year         = {2018},
   howpublished = {arXiv:1706.07036 [cs.CV]}
 }
+
 
 @inproceedings{Lipman2021,
   title     = {Phase Transitions, Distance Functions, and Implicit Neural Representations},
@@ -2289,7 +2294,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
   author    = {Oechsle, Michael and Mescheder, Lars and Niemeyer, Michael and Strauss, Thilo and Geiger, Andreas},
@@ -2325,7 +2329,6 @@
   year    = {2009}
 }
 
-
 @inproceedings{P.2004,
   author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
   title     = {Geometric texture synthesis by example},
@@ -2340,12 +2343,14 @@
   year      = {2015}
 }
 
+
 @inproceedings{Pan2021,
   title     = {{3D} Object Detection with {PointFormer}},
   author    = {Pan, Xuran and Xia, Zhuofan and Song, Shiji and Li, Li Erran and Huang, Gao},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Panozzo2013,
   author  = {Daniele Panozzo and Ilya Baran and Olga Diamanti and Olga Sorkine-Hornung},
@@ -2487,7 +2492,6 @@
   year    = {2019}
 }
 
-
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
   title   = {Unified Neural Encoding of {BTFs}},
@@ -2495,6 +2499,15 @@
   volume  = 39,
   number  = 2,
   year    = 2020
+}
+
+@article{Raviv2010,
+  title   = {Full and partial symmetries of non-rigid shapes},
+  author  = {Raviv, Dan and Bronstein, Alexander M and Bronstein, Michael M and Kimmel, Ron},
+  journal = {International Journal of Computer Vision},
+  volume  = {89},
+  number  = {1},
+  year    = {2010}
 }
 
 @article{Ray2009,
@@ -2506,13 +2519,13 @@
   number  = {1}
 }
 
+
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
   year      = {2019},
   publisher = {Elsevier}
 }
-
 
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
@@ -2527,6 +2540,7 @@
   title   = {{3D-A-Nets}: {3D} deep dense descriptor for volumetric shapes with adversarial networks},
   year    = {2017}
 }
+
 
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
@@ -2572,7 +2586,6 @@
   year      = 2019
 }
 
-
 @article{Rousseeuw1987,
   author  = {Peter J. Rousseeuw},
   title   = {Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
@@ -2591,13 +2604,13 @@
   number  = {2}
 }
 
+
 @article{Ruckert2021,
   title   = {{ADOP}: Approximate differentiable one-pixel point rendering},
   author  = {R{\"u}ckert, Darius and Franke, Linus and Stamminger, Marc},
   journal = {arXiv preprint arXiv:2110.06635},
   year    = {2021}
 }
-
 
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
@@ -2612,6 +2625,7 @@
   booktitle = ICML,
   year      = {2020}
 }
+
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -2665,7 +2679,6 @@
   year      = {2016}
 }
 
-
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2675,13 +2688,13 @@
   number  = {6}
 }
 
-
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
   author  = {Shao, Tianjia and Yang, Yin and Weng, Yanlin and Hou, Qiming and Zhou, Kun},
   journal = TVCG,
   year    = {2018}
 }
+
 
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
@@ -2709,6 +2722,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
@@ -2749,7 +2763,6 @@
   number  = {3}
 }
 
-
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -2759,7 +2772,6 @@
   number  = {6}
 }
 
-
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -2768,6 +2780,7 @@
   volume  = {25},
   number  = {3}
 }
+
 
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
@@ -2790,6 +2803,7 @@
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
+
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2843,14 +2857,12 @@
   year    = {2018}
 }
 
-
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
   booktitle = NeurIPS,
   year      = {2019}
 }
-
 
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
@@ -2859,12 +2871,14 @@
   year      = {2020}
 }
 
+
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
+
 
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
@@ -2918,7 +2932,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -2926,13 +2939,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
   author    = {Su, Weijie and Zhu, Xizhou and Cao, Yue and Li, Bin and Lu, Lewei and Wei, Furu and Dai, Jifeng},
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -2942,6 +2955,7 @@
   volume  = {28},
   number  = {5}
 }
+
 
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
@@ -2987,7 +3001,6 @@
   year      = {2015}
 }
 
-
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
   title   = {Data-driven structural priors for shape completion},
@@ -2997,7 +3010,6 @@
   number  = {6}
 }
 
-
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
   title   = {{VASE}: Volume-Aware Surface Evolution for Surface Reconstruction from Incomplete Point Clouds},
@@ -3006,6 +3018,7 @@
   volume  = {30},
   number  = {5}
 }
+
 
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
@@ -3022,13 +3035,13 @@
   year    = {2019}
 }
 
-
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Tang2018,
   title   = {Real-time Compression and Streaming of {4D} Performances},
@@ -3038,6 +3051,7 @@
   number  = {6},
   year    = {2018}
 }
+
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -3052,7 +3066,6 @@
   booktitle = NeurIPS,
   year      = {2021}
 }
-
 
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
@@ -3070,6 +3083,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
@@ -3084,14 +3098,12 @@
   year      = {2016}
 }
 
-
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Octree generating networks: efficient convolutional architectures for high-resolution {3D} outputs},
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
@@ -3100,12 +3112,14 @@
   year      = {1995}
 }
 
+
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
   title     = {{KPConv}: Flexible and deformable convolution for point clouds},
   booktitle = ICCV,
   year      = 2019
 }
+
 
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
@@ -3330,14 +3344,12 @@
   number  = {5}
 }
 
-
 @inproceedings{Wang2020,
   author    = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
   booktitle = {CVPR Workshop},
   title     = {Deep Octree-based {CNNs} with Output-Guided Skip Connections for {3D} Shape and Scene Completion},
   year      = {2020}
 }
-
 
 @inproceedings{Wang2020a,
   title     = {Dense Contrastive Learning for Self-Supervised Visual Pre-Training},
@@ -3346,12 +3358,14 @@
   year      = {2021}
 }
 
+
 @article{Wang2020b,
   author  = {Hanchen Wang and Qi Liu and Xiangyu Yue and Joan Lasenby and Matthew J. Kusner},
   title   = {Pre-Training by Completing Point Clouds},
   journal = {arXiv:2010.01089},
   year    = {2020}
 }
+
 
 @inproceedings{Wang2021,
   title     = {Unsupervised {3D} Learning for Shape Analysis via Multiresolution Instance Discrimination},
@@ -3415,7 +3429,6 @@
   number  = {1}
 }
 
-
 @inproceedings{Wei2016,
   author    = {Linyu Wei and Qixing Huang and Duygu Ceylan and Etienne Vouga and Hao Li},
   title     = {Dense human body correspondences using convolutional networks},
@@ -3431,6 +3444,7 @@
   volume  = {11},
   number  = {3}
 }
+
 
 @inproceedings{Williams2021,
   title     = {Neural splines: Fitting {3D} surfaces with infinitely-wide neural networks},
@@ -3462,7 +3476,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
   title     = {Learning a probabilistic latent space of object shapes via {3D} generative-adversarial modeling},
@@ -3470,13 +3483,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Wu2017,
   author    = {Wu, Jiajun and Wang, Yifan and Xue, Tianfan and Sun, Xingyuan and Freeman, Bill and Tenenbaum, Josh},
   title     = {Marrnet: {3D} shape reconstruction via {2.5D} sketches},
   booktitle = NeurIPS,
   year      = {2017}
 }
+
 
 @article{Wu2018,
   author  = {Wu, Qiaoyun and Xu, Kai and Wang, Jun},
@@ -3486,6 +3499,7 @@
   volume  = {37},
   number  = {5}
 }
+
 
 @inproceedings{Wu2018a,
   author    = {Wu, Zhirong and Xiong, Yuanjun and Yu, Stella X. and Lin, Dahua},
@@ -3556,7 +3570,6 @@
   number  = {7}
 }
 
-
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
   author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
@@ -3564,13 +3577,21 @@
   year    = {2020}
 }
 
-
 @inproceedings{Xie2021,
   title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
   author    = {Xie, Zhenda and Lin, Yutong and Zhang, Zheng and Cao, Yue and Lin, Stephen and Hu, Han},
   booktitle = CVPR,
   year      = {2021}
 }
+
+
+@incollection{Xu2009,
+  title     = {Partial intrinsic reflectional symmetry of {3D} shapes},
+  author    = {Xu, Kai and Zhang, Hao and Tagliasacchi, Andrea and Liu, Ligang and Li, Guo and Meng, Min and Xiong, Yueshan},
+  booktitle = SA,
+  year      = {2009}
+}
+
 
 @article{Xu2012,
   author  = {Xu, Li and Yan, Qiong and Xia, Yang and Jia, Jiaya},
@@ -3595,7 +3616,6 @@
   year      = {2015}
 }
 
-
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -3613,6 +3633,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
   author    = {Xu, Mutian and Ding, Runyu and Zhao, Hengshuang and Qi, Xiaojuan},
@@ -3627,7 +3648,6 @@
   year      = {2002}
 }
 
-
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
   title     = {Mesh denoising via iterative alpha-trimming and nonlinear diffusion of normals with automatic thresholding},
@@ -3635,6 +3655,7 @@
   year      = {2003},
   issn      = {1530-1052}
 }
+
 
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
@@ -3680,7 +3701,6 @@
   year    = {2018}
 }
 
-
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
   booktitle = CVPR,
@@ -3706,6 +3726,7 @@
   number  = {6}
 }
 
+
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
   title        = {Large-scale {3D} shape reconstruction and segmentation from {ShapeNetCore55}},
@@ -3721,7 +3742,6 @@
   volume  = {36},
   number  = {4}
 }
-
 
 @inproceedings{Yi2017b,
   author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
@@ -3739,6 +3759,7 @@
   volume  = {37},
   number  = {4}
 }
+
 
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
@@ -3777,13 +3798,13 @@
   year      = {2021}
 }
 
-
 @article{Yu2021a,
   title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
   author  = {Yu, Xumin and Tang, Lulu and Rao, Yongming and Huang, Tiejun and Zhou, Jie and Lu, Jiwen},
   journal = {arXiv:2111.14819},
   year    = {2021}
 }
+
 
 @inproceedings{Yun2019,
   title     = {{CutMix}: Regularization Strategy to Train Strong Classifiers with Localizable Features},
@@ -3792,13 +3813,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
   title     = {Surface feature detection and description with applications to mesh matching},
   booktitle = CVPR,
   year      = {2009}
 }
+
 
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
@@ -3813,7 +3834,6 @@
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -3834,13 +3854,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -3850,6 +3870,7 @@
   volume  = {21},
   number  = {7}
 }
+
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3960,13 +3981,13 @@
   year      = {2013}
 }
 
-
 @inproceedings{Zhong2020,
   title     = {Reconstructing continuous distributions of {3D} protein structure from cryo-{EM} images},
   author    = {Zhong, Ellen D and Bepler, Tristan and Davis, Joseph H and Berger, Bonnie},
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Zhou2006,
   author  = {Zhou, Kun and Huang, Xin and Wang, Xi and Tong, Yiying and Desbrun, Mathieu and Guo, Baining and Shum, Heung-Yeung},
@@ -4014,12 +4035,21 @@
   year      = {2017}
 }
 
-
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
   author    = {Chenyang Zhu and Kai Xu and Siddhartha Chaudhuri and Li Yi and Leonidas Guibas and Hao Zhang},
   year      = {2020},
   booktitle = CVPR
+}
+
+
+@article{Zigelman2002,
+  title   = {Texture mapping using surface flattening via multidimensional scaling},
+  author  = {Zigelman, Gil and Kimmel, Ron and Kiryati, Nahum},
+  journal = TVCG,
+  volume  = {8},
+  number  = {2},
+  year    = {2002}
 }
 
 @inproceedings{Zou2017,
