--- a/reference.bib
+++ b/reference.bib
@@ -91,13 +91,13 @@
   number  = {12}
 }
 
+
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
-
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -114,6 +114,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
   author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
@@ -128,13 +129,13 @@
   year    = {2017}
 }
 
-
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
   title     = {K-means++: the advantages of careful seeding},
   booktitle = {SODA},
   year      = {2007}
 }
+
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -145,7 +146,6 @@
   number  = {2}
 }
 
-
 @article{Atzmon2018,
   author  = {Atzmon, Matan and Maron, Haggai and Lipman, Yaron},
   title   = {Point Convolutional Neural Networks by Extension Operators},
@@ -154,6 +154,7 @@
   number  = {4},
   journal = SIG
 }
+
 
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
@@ -168,7 +169,6 @@
   booktitle = ICLR,
   year      = {2021}
 }
-
 
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
@@ -186,6 +186,7 @@
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
   year      = {2011}
 }
+
 
 @article{Averkiou2016,
   author  = {Averkiou, Melinos and Kim, Vladimir G. and Mitra, Niloy J.},
@@ -274,7 +275,6 @@
   year    = {2002}
 }
 
-
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
   journal = TPAMI,
@@ -283,6 +283,7 @@
   volume  = {35},
   number  = {8}
 }
+
 
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
@@ -359,7 +360,6 @@
   year      = {2016}
 }
 
-
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
   title   = {On linear variational surface deformation methods},
@@ -368,6 +368,7 @@
   volume  = {14},
   number  = {1}
 }
+
 
 @book{Botsch2010,
   title  = {Polygon Mesh Processing},
@@ -391,13 +392,13 @@
   year      = {2011}
 }
 
-
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
   author    = {Bridson, Robert},
   year      = {2015},
   publisher = {CRC press}
 }
+
 
 @inproceedings{Brock2016,
   author    = {Andrew Brock and Theodore Lim and J.M. Ritchie and Nick Weston},
@@ -566,13 +567,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
@@ -602,6 +603,13 @@
   title     = {{4D} spatio-temporal convnets: {Minkowski} convolutional neural networks},
   booktitle = CVPR,
   year      = {2019}
+}
+
+@article{Chu2021,
+  title   = {Conditional positional encodings for vision transformers},
+  author  = {Chu, Xiangxiang and Tian, Zhi and Zhang, Bo and Wang, Xinlong and Wei, Xiaolin and Xia, Huaxia and Shen, Chunhua},
+  journal = {arXiv preprint arXiv:2102.10882},
+  year    = {2021}
 }
 
 
